Fix hovers, mobile alignment, option height

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -70,14 +70,19 @@ main {
     justify-content: space-evenly;
     width: 100%;
 
+    li {
+      margin-bottom: 2rem;
+    }
+
     li a {
       background-color: $cream;
+      border: solid 6px transparent;
       cursor: pointer;
       display: flex;
       flex-direction: column;
       font-size: 1.5rem;
       font-weight: bold;
-      height: 100%;
+      height: 14rem;
       -webkit-box-pack: justify;
       justify-content: space-between;
       text-align: center;
